<resources>
    <string name="app_name">CalculadoraDMO</string>
    <string name="xxxx">0.0</string>
    <string name="C">C</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_ponto">.</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="ce">CE</string>
    <string name="_potencia">^</string>
    <string name="_igual">=</string>
    <string name="_dividir">/</string>
    <string name="x">x</string>
    <string name="_subtrair">-</string>
    <string name="_adicionar">+</string>
    <string name="format_Error_pontos">Só um ponto por favor.</string>
</resources>
